Update: Imposed the component to take the maximum space from parent to fix layout issues

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,5 +1,7 @@
 .collapse-container {
+    width: 100%;
     .collapse {
+        width: 100%;
         .collapse__toggle {
             display: flex;
             justify-content: space-between;
